--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -260,6 +260,7 @@ of this chapter we consider only building from the sources.
 * Uninstallation::              
 * Sub-architectures::           
 * Testing a Unix-alike Installation::  
+* Byte-compiler::               
 @end menu
 
 @node Simple compilation, Help options, Installing R under Unix-alikes, Installing R under Unix-alikes
@@ -816,7 +817,7 @@ e.g.@: @file{/usr/lib64/R/bin}.  Normally all installed architectures
 will run on the platform so the architecture of @command{Rscript} does
 not matter.
 
-@node Testing a Unix-alike Installation,  , Sub-architectures, Installing R under Unix-alikes
+@node Testing a Unix-alike Installation, Byte-compiler, Sub-architectures, Installing R under Unix-alikes
 @section Testing an Installation
 
 Full testing is possible only if the test files have been installed with
@@ -888,6 +889,25 @@ try setting
 LANGUAGE=en LC_TIME=C
 @end example
 
+@node Byte-compiler,  , Testing a Unix-alike Installation, Installing R under Unix-alikes
+@section Byte-compiler
+
+@R{} 2.13.0 introduced a new `byte' compiler which does compiles @R{}
+code to a `byte code' representation.  This is by default not used, but
+is available for experimentation.  To compile all the base and
+recommended packages, run
+
+@example
+make bytecode
+@end example
+
+@noindent
+in the top-level build directory.  This will find build (or re-build)
+@R{} in the normal way, then compile the package code (which for the
+recommended packages entails a complete re-install of the package from
+the tarball).
+
+
 @node Installing R under Windows, Installing R under Mac OS X, Installing R under Unix-alikes, Top
 @chapter Installing R under Windows
 @cindex Installing under Windows
@@ -917,10 +937,11 @@ Windows @acronym{FAQ}} for more details on the binary installer.
 
 @menu
 * Building from source::        
+* Byte-compiler on Windows::    
 * Testing a Windows Installation::  
 @end menu
 
-@node Building from source, Testing a Windows Installation, Installing R under Windows, Installing R under Windows
+@node Building from source, Byte-compiler on Windows, Installing R under Windows, Installing R under Windows
 @section Building from source
 
 @R{} can be built as either a 32-bit or 64-bit application on Windows:
@@ -1358,7 +1379,23 @@ of Yu Gong at a crucial step in porting R to MinGW-w64 is gratefully
 acknowledged, as well as help from Kai Tietz, the lead developer of the
 MinGW-w64 project.
 
-@node Testing a Windows Installation,  , Building from source, Installing R under Windows
+@node Byte-compiler on Windows, Testing a Windows Installation, Building from source, Installing R under Windows
+@section Byte-compiler
+
+@R{} 2.13.0 introduced a new `byte' compiler which does compiles @R{}
+code to a `byte code' representation.  This is by default not used, but
+is available for experimentation.  To compile all the base and
+recommended packages, first build @R{} from the sources in the normal
+way, then run
+
+@example
+make bytecode
+@end example
+
+@noindent
+in the @file{src/gnuwin32} directory.
+
+@node Testing a Windows Installation,  , Byte-compiler on Windows, Installing R under Windows
 @section Testing an Installation
 
 The Windows installer contains a set of test files used when building
