--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -892,10 +892,10 @@ LANGUAGE=en LC_TIME=C
 @node Byte-compiler,  , Testing a Unix-alike Installation, Installing R under Unix-alikes
 @section Byte-compiler
 
-@R{} 2.13.0 introduced a new `byte' compiler which does compiles @R{}
-code to a `byte code' representation.  This is by default not used, but
-is available for experimentation.  To compile all the base and
-recommended packages, run
+@R{} 2.13.0 introduced a new `byte' compiler which compiles @R{} code to
+a `byte code' representation.  This is by default not used, but is
+available for experimentation.  To compile all the base and recommended
+packages, run
 
 @example
 make bytecode
@@ -905,8 +905,15 @@ make bytecode
 in the top-level build directory.  This will find build (or re-build)
 @R{} in the normal way, then compile the package code (which for the
 recommended packages entails a complete re-install of the package from
-the tarball).
+the tarball).  To update @R{}, set the environment variables
 
+@example
+R_COMPILE_PKGS=1
+R_COMPILER_SUPPRESS_ALL=1
+@end example
+
+@noindent
+before re-running @command{make}.
 
 @node Installing R under Windows, Installing R under Mac OS X, Installing R under Unix-alikes, Top
 @chapter Installing R under Windows
@@ -1382,18 +1389,27 @@ MinGW-w64 project.
 @node Byte-compiler on Windows, Testing a Windows Installation, Building from source, Installing R under Windows
 @section Byte-compiler
 
-@R{} 2.13.0 introduced a new `byte' compiler which does compiles @R{}
-code to a `byte code' representation.  This is by default not used, but
-is available for experimentation.  To compile all the base and
-recommended packages, first build @R{} from the sources in the normal
-way, then run
+@R{} 2.13.0 introduced a new `byte' compiler which compiles @R{} code to
+a `byte code' representation.  This is by default not used, but is
+available for experimentation.  To compile all the base and recommended
+packages, first build @R{} from the sources in the normal way, then run
 
 @example
 make bytecode
 @end example
 
 @noindent
-in the @file{src/gnuwin32} directory.
+in the @file{src/gnuwin32} directory. To update @R{}, set the
+environment variables
+
+@example
+R_COMPILE_PKGS=1
+R_COMPILER_SUPPRESS_ALL=1
+@end example
+
+@noindent
+before re-running @command{make}.
+
 
 @node Testing a Windows Installation,  , Byte-compiler on Windows, Installing R under Windows
 @section Testing an Installation
